# MultithreadSubstringSeeker

./: CMakeLists.txt  main.cpp  multithreadqueue.h  multithreadsubstringseeker.cpp  multithreadsubstringseeker.h  multithreadsubstringseekerinfile.cpp  threadpool.cpp  threadpool.h
tester/: substringseekertetser.h
tests/: substringseekertetser.cpp
